# parallel_computing_lab1

./: Cargo.toml
benchmark/: bench_results  benchmark.sh  parallel_8_optimized  parallel_results_128  parallel_results_16  parallel_results_2  parallel_results_32  parallel_results_4  parallel_results_64  parallel_results_8  parallel_results_8_optimized  plot_graph.py  seq_optimized  seq_tests_data  threads_data
src/: parallel.rs  sequential.rs
